--- a/ReachComData/ReachComData.csproj
+++ b/ReachComData/ReachComData.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComReach.cs" />
     <Compile Include="DataLayer.cs" />
     <Compile Include="CurrentAction.cs" />
     <Compile Include="ErrorLookup.cs" />
