--- a/ReachComApp/Properties/Settings.settings
+++ b/ReachComApp/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ReachComApp.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="REACHCOM" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">https://www.google.com/</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
